Use tags to distinguish Python 2.7 versions.

--- a/simulation/Dockerfile_py2
+++ b/simulation/Dockerfile_py2
@@ -2,7 +2,7 @@
 # A Docker image for running neuronal network simulations
 #
 
-FROM neuralensemble/base_py2
+FROM neuralensemble/base:py2
 MAINTAINER andrew.davison@unic.cnrs-gif.fr
 
 ENV NEST_VER=2.10.0 NRN_VER=7.4
