--- a/simulationx/Dockerfile_py2
+++ b/simulationx/Dockerfile_py2
@@ -5,7 +5,7 @@
 # for SSH access and Xwindows.
 #
 
-FROM neuralensemble/simulation_py2
+FROM neuralensemble/simulation:py2
 MAINTAINER andrew.davison@unic.cnrs-gif.fr
 
 USER root
