Created separate Git branch for Python 2 versions of Dockerfiles, as this seems it will work better with Docker Hub automated builds

--- a/simulationx/Dockerfile
+++ b/simulationx/Dockerfile
@@ -5,7 +5,7 @@
 # for SSH access and Xwindows.
 #
 
-FROM neuralensemble/simulation
+FROM neuralensemble/simulation:py2
 MAINTAINER andrew.davison@unic.cnrs-gif.fr
 
 USER root
