--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -5,20 +5,17 @@
 FROM neuralensemble/base
 MAINTAINER andrew.davison@unic.cnrs-gif.fr
 
-ENV NEST_VER=2.10.0 NRN_VER=7.4
-ENV NEST=nest-$NEST_VER NRN=nrn-$NRN_VER
+ENV NEST_VER=2.12.0 NRN_VER=7.4
+ENV NEST=nest-simulator-$NEST_VER NRN=nrn-$NRN_VER
 ENV PATH=$PATH:$VENV/bin
 RUN ln -s /usr/bin/2to3-3.4 $VENV/bin/2to3
 
-WORKDIR /home/docker/packages
-RUN wget https://github.com/nest/nest-simulator/releases/download/v$NEST_VER/$NEST.tar.gz
+WORKDIR $HOME/packages
+RUN wget https://github.com/nest/nest-simulator/releases/download/v$NEST_VER/nest-$NEST_VER.tar.gz -O $HOME/packages/$NEST.tar.gz;
 RUN wget http://www.neuron.yale.edu/ftp/neuron/versions/v$NRN_VER/$NRN.tar.gz
 RUN tar xzf $NEST.tar.gz; tar xzf $NRN.tar.gz; rm $NEST.tar.gz $NRN.tar.gz
 RUN git clone --depth 1 https://github.com/INCF/libneurosim.git
 RUN cd libneurosim; ./autogen.sh
-
-COPY nest.patch $HOME/nest.patch
-RUN patch -p0 $HOME/packages/$NEST/pynest/nest/__init__.py < $HOME/nest.patch
 
 RUN mkdir $VENV/build
 WORKDIR $VENV/build
@@ -28,7 +25,14 @@ RUN mkdir libneurosim; \
     make; make install; ls $VENV/lib $VENV/include
 RUN mkdir $NEST; \
     cd $NEST; \
-    PYTHON=$VENV/bin/python $HOME/packages/$NEST/configure --with-mpi --prefix=$VENV --with-libneurosim=$VENV; \
+    ln -s /usr/lib/python3.4/config-3.4m-x86_64-linux-gnu/libpython3.4.so $VENV/lib/; \
+    cmake -DCMAKE_INSTALL_PREFIX=$VENV \
+          -Dwith-mpi=ON  \
+          ###-Dwith-music=ON \
+          -Dwith-libneurosim=ON \
+          -DPYTHON_LIBRARY=$VENV/lib/libpython3.4.so \
+          -DPYTHON_INCLUDE_DIR=/usr/include/python3.4 \
+          $HOME/packages/$NEST; \
     make; make install
 RUN mkdir $NRN; \
     cd $NRN; \
@@ -38,7 +42,7 @@ RUN mkdir $NRN; \
     cd $VENV/bin; ln -s ../x86_64/bin/nrnivmodl
 
 RUN $VENV/bin/pip3 install lazyarray nrnutils PyNN
-RUN $VENV/bin/pip3 install --pre brian2
+RUN $VENV/bin/pip3 install brian2
 
 WORKDIR /home/docker/
 RUN echo "source $VENV/bin/activate" >> .bashrc
