Fix the simulation:py2 Dockerfile

--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -21,6 +21,7 @@ RUN mkdir libneurosim; \
     cd libneurosim; \
     PYTHON=$VENV/bin/python $HOME/packages/libneurosim/configure --prefix=$VENV; \
     make; make install; ls $VENV/lib $VENV/include
+RUN ln -s /usr/lib/python2.7/config-x86_64-linux-gnu/libpython2.7.so $VENV/lib/
 RUN mkdir $NEST; \
     cd $NEST; \
     cmake -DCMAKE_INSTALL_PREFIX=$VENV \
