--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -10,7 +10,7 @@ ENV LANG=C.UTF-8
 
 RUN apt-get update; apt-get install -y automake libtool build-essential openmpi-bin libopenmpi-dev git vim  \
                        wget python3 libpython3-dev libncurses5-dev libreadline-dev libgsl0-dev cython3 \
-                       python3-pip python3-numpy python3-scipy python3-matplotlib python3-jinja2 python3-mock \
+                       python3-numpy python3-scipy python3-matplotlib python3-jinja2 python3-mock \
                        ipython3 python3-httplib2 python3-docutils python3-yaml \
                        subversion python3-venv python3-mpi4py python3-tables python3-h5py cmake zlib1g-dev
 
