--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -67,7 +67,7 @@ RUN $VENV/bin/pip install nrnutils==0.2.0
 #### Install Brian2  
 
 # Note 1: Brian 1.4.1 not Python 3 compatible
-# Note 2: For latest status on Brain 2 support in PyNN see: https://github.com/NeuralEnsemble/PyNN/pull/654
+# Note 2: For latest status on Brian 2 support in PyNN see: https://github.com/NeuralEnsemble/PyNN/pull/654
 
 RUN $VENV/bin/pip install brian2==$BRIAN2_VER
 
