Updates for py3 for pynn094 (#10)
* Initial py3 tests

* Ensure neo 0.7.1

* Tests for py3

* Initial ver

* Don't install python3-pip with apt-get

* Progress with moose install

* Renaming image names to original

* Use Brain 2.3

* Specific versions of pynn etc at top of file

* Update Readmes

* Typo

* Adding specific version of neo

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -2,7 +2,7 @@
 # A base Docker image for Python-based computational neuroscience and neurophysiology
 #
 
-FROM neurodebian:jessie
+FROM neurodebian:xenial
 MAINTAINER andrew.davison@unic.cnrs-gif.fr
 
 ENV DEBIAN_FRONTEND noninteractive
@@ -10,9 +10,9 @@ ENV LANG=C.UTF-8
 
 RUN apt-get update; apt-get install -y automake libtool build-essential openmpi-bin libopenmpi-dev git vim  \
                        wget python3 libpython3-dev libncurses5-dev libreadline-dev libgsl0-dev cython3 \
-                       python3-pip python3-numpy python3-scipy python3-matplotlib python3-jinja2 python3-mock \
+                       python3-numpy python3-scipy python3-matplotlib python3-jinja2 python3-mock \
                        ipython3 python3-httplib2 python3-docutils python3-yaml \
-                       subversion python3-venv python3-mpi4py python3-tables python3-h5py cmake
+                       subversion python3-venv python3-mpi4py python3-tables python3-h5py cmake zlib1g-dev
 
 RUN useradd -ms /bin/bash docker
 USER docker
@@ -26,5 +26,6 @@ ENV VENV=$HOME/env/neurosci
 RUN python3 -m venv $VENV && python3 -m venv --system-site-packages $VENV
 
 RUN $VENV/bin/pip3 install --upgrade pip
-RUN $VENV/bin/pip3 install parameters quantities neo "django<1.9" django-tagging future hgapi gitpython sumatra nixio
+# Using specific version of neo, due to this issue: https://github.com/NeuralEnsemble/neuralensemble-docker/issues/9#issuecomment-483764236
+RUN $VENV/bin/pip3 install parameters quantities neo==0.7.2 "django<1.9" django-tagging future hgapi gitpython sumatra nixio
 RUN $VENV/bin/pip3 install --upgrade nose ipython
