Testing with pynn 0.9.5

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -26,6 +26,5 @@ ENV VENV=$HOME/env/neurosci
 RUN python3 -m venv $VENV && python3 -m venv --system-site-packages $VENV
 
 RUN $VENV/bin/pip3 install --upgrade pip
-# Using specific version of neo, due to this issue: https://github.com/NeuralEnsemble/neuralensemble-docker/issues/9#issuecomment-483764236
-RUN $VENV/bin/pip3 install parameters quantities neo==0.7.2 "django<1.9" django-tagging future hgapi gitpython sumatra nixio
+RUN $VENV/bin/pip3 install parameters quantities neo "django<1.9" django-tagging future hgapi gitpython sumatra nixio
 RUN $VENV/bin/pip3 install --upgrade nose ipython
