To nest 2.20; specifc version libneurosim

--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -10,7 +10,7 @@ RUN ln -s /usr/bin/2to3-3.5 $VENV/bin/2to3
 
 #### Set versions
 
-ENV NEST_VER=2.20.0 
+ENV NEST_VER=2.18.0 
 ENV NRN_VER=7.7
 # Note: see below re Brian2 support...
 ENV BRIAN2_VER=2.3   
@@ -24,8 +24,8 @@ ENV NEST=nest-simulator-$NEST_VER
 WORKDIR $HOME/packages
 RUN wget https://github.com/nest/nest-simulator/archive/v$NEST_VER.tar.gz -O $HOME/packages/$NEST.tar.gz;
 RUN tar xzf $NEST.tar.gz; rm $NEST.tar.gz
-RUN git clone --depth 1 https://github.com/INCF/libneurosim.git
-RUN cd libneurosim; ./autogen.sh
+RUN git clone https://github.com/INCF/libneurosim.git
+RUN cd libneurosim; git checkout 03646747c8fe64fa3439ac2d282623b659f60c22; ./autogen.sh
 
 RUN mkdir $VENV/build
 WORKDIR $VENV/build
