Remove _95 from names of images

--- a/osb/Dockerfile
+++ b/osb/Dockerfile
@@ -7,8 +7,8 @@
 
 # Use tagged version of neuralensemble/simulationx, e.g. Python 2, PyNN 0.9.1
 #FROM neuralensemble/simulationx:py2_pynn094
-# Temp for testing
-FROM neuralensemble/simulationx_95
+# For local testing
+FROM neuralensemble/simulationx
 MAINTAINER p.gleeson@gmail.com
 
 USER root
