--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,3 +29,8 @@ jobs:
       run: |
         cd simulationx       
         ./generate.sh
+
+    - name: Build the osb Docker image
+      run: |
+        cd osb       
+        ./generate.sh
