Temp disable moose in dockerfile

--- a/osb/Dockerfile
+++ b/osb/Dockerfile
@@ -61,7 +61,7 @@ ENV NEST_INSTALL_DIR=$HOME/env/neurosci
 # Install NetPyNE
 
 RUN apt-get remove -y python3-cycler python3-matplotlib python3-dateutil
-RUN $VENV/bin/pip install matplotlib==2.2.4 pandas==0.23.4 python-dateutil==2.5.0
+#RUN $VENV/bin/pip install pandas==0.23.4 python-dateutil==2.5.0
 RUN $VENV/bin/pip install netpyne==1.0.0.2
 
 
@@ -89,9 +89,9 @@ RUN cd neuroConstruct && ./updatenC.sh && ./nC.sh -make && cd -
 
 # Compile Moose with /usr/bin/python3, but install with venv version...
 # Caused by (not insurmountable) issue finding python headers in venv
-RUN git clone https://github.com/pgleeson/moose-core.git && cd moose-core && \
-    mkdir build_ && cd build_ && cmake -DPYTHON_EXECUTABLE:FILEPATH=/usr/bin/python3 .. && \
-    make -j4 && make install && cd python && $VENV/bin/python setup.py install
+##RUN git clone https://github.com/pgleeson/moose-core.git && cd moose-core && \
+##    mkdir build_ && cd build_ && cmake -DPYTHON_EXECUTABLE:FILEPATH=/usr/bin/python3 .. && \
+##    make -j4 && make install && cd python && $VENV/bin/python setup.py install
 
 
 # Update PyNN
