Use latest pyNeuroML & updated moose version

--- a/osb/Dockerfile
+++ b/osb/Dockerfile
@@ -23,9 +23,8 @@ RUN /bin/bash -c "source ~/env/neurosci/bin/activate"
 
 # Install NeuroML Python libraries
 
-RUN $VENV/bin/pip install pyNeuroML==0.5.18 # will set versions of libNeuroML, pylems, NeuroMLlite...
+RUN $VENV/bin/pip install pyNeuroML==0.5.19 # will set versions of libNeuroML, pylems, NeuroMLlite...
 
-###RUN $VENV/bin/pip install matplotlib==2.2.4
 
 # Install OMV
 
@@ -89,9 +88,8 @@ RUN cd neuroConstruct && ./updatenC.sh && ./nC.sh -make && cd -
 
 # Compile Moose with /usr/bin/python3, but install with venv version...
 # Caused by (not insurmountable) issue finding python headers in venv
-RUN git clone https://github.com/pgleeson/moose-core.git && cd moose-core && \
-    mkdir build_ && cd build_ && cmake -DPYTHON_EXECUTABLE:FILEPATH=/usr/bin/python3 .. && \
-    make -j4 && make install && cd python && $VENV/bin/python setup.py install
+RUN git clone https://github.com/OpenSourceBrain/moose-core.git && cd moose-core && \
+    git checkout nml2_updates_2 && $VENV/bin/python setup.py install
 
 
 # Update PyNN
