--- a/osb/Dockerfile
+++ b/osb/Dockerfile
@@ -23,7 +23,7 @@ RUN /bin/bash -c "source ~/env/neurosci/bin/activate"
 
 # Install NeuroML Python libraries
 
-RUN $VENV/bin/pip install pyNeuroML==0.5.19 # will set versions of libNeuroML, pylems, NeuroMLlite...
+RUN $VENV/bin/pip install pyNeuroML==0.7.5 # will set versions of libNeuroML, pylems, NeuroMLlite...
 
 
 # Install OMV
@@ -61,7 +61,7 @@ ENV NEST_INSTALL_DIR=$HOME/env/neurosci
 
 RUN apt-get remove -y python3-cycler python3-matplotlib python3-dateutil
 #RUN $VENV/bin/pip install pandas==0.23.4 python-dateutil==2.5.0
-RUN $VENV/bin/pip install netpyne==1.0.0.2
+RUN $VENV/bin/pip install netpyne==1.0.2.1
 
 
 ######### Disabled for now, issues compiling on bionic....
@@ -104,11 +104,11 @@ RUN git clone https://github.com/OpenSourceBrain/moose-core.git && cd moose-core
 ###RUN $VENV/bin/pip uninstall pynn -y
 
 USER root
-RUN git clone https://github.com/NeuralEnsemble/PyNN.git  && \
-    cd  PyNN && \
-    git checkout 0.10.0 && \
-    $VENV/bin/python  setup.py install && \
-    cd -   # neuroml branch has the latest NML2 import/export code!
+#RUN git clone https://github.com/NeuralEnsemble/PyNN.git  && \
+#    cd  PyNN && \
+#    git checkout 0.10.1 && \
+#    $VENV/bin/python  setup.py install && \
+#    cd -   # neuroml branch has the latest NML2 import/export code!
 RUN which python
 
 # Update Brian
